Re-wrote iseqr_exp_cl to accept tcr class objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bleep)
 export(clonality)
 export(delta_stats)
 export(iseqr_aggregate)
+export(iseqr_exp_cl)
 export(iseqr_make_tcr)
 export(iseqr_merge)
 export(iseqr_morisita)
